--- a/sql/makefile.setup
+++ b/sql/makefile.setup
@@ -1,7 +1,7 @@
 prefix=/opt/GNAT/2021/bin/..
 ENABLE_SHARED=no
 INTEGRATED=no
-BUILD=DEBUG
+BUILD=PROD
 PROCESSORS=4
 TARGET=x86_64-pc-linux-gnu
 SOURCE_DIR=./
