--- a/xref/makefile.setup
+++ b/xref/makefile.setup
@@ -1,7 +1,8 @@
 prefix=/opt/GNAT/2021/bin/..
+ENABLE_SHARED=no
+INTEGRATED=yes
 BUILD=PROD
 PROCESSORS=4
 TARGET=x86_64-pc-linux-gnu
 SOURCE_DIR=./
 GNATCOLL_VERSION=2021
-DB_BACKEND=all
