--- a/sql/makefile.setup
+++ b/sql/makefile.setup
@@ -1,8 +1,8 @@
 prefix=/opt/GNAT/2021/bin/..
-ENABLE_SHARED=no
+ENABLE_SHARED=yes
 INTEGRATED=no
 BUILD=PROD
-PROCESSORS=4
+PROCESSORS=1
 TARGET=x86_64-pc-linux-gnu
 SOURCE_DIR=./
 GNATCOLL_VERSION=2021
