Moving to alire

--- a/gnatcoll_db2ada/makefile.setup
+++ b/gnatcoll_db2ada/makefile.setup
@@ -1,7 +1,7 @@
-prefix=/opt/GNAT/2021/bin/..
+prefix=/opt/GNAT/12.2.1/bin/..
 BUILD=PROD
 PROCESSORS=1
 TARGET=x86_64-pc-linux-gnu
 SOURCE_DIR=./
-GNATCOLL_VERSION=2021
+GNATCOLL_VERSION=2022
 DB_BACKEND=all
